Fix SVG path for GitHub Pages deployment

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -259,17 +259,9 @@
                 <h2 class="text-2xl font-bold">
                     <a href="http://localhost:1313/projects/star-lite/">STAR_Lite</a>
                 </h2>
-                <p><p>STAR_Lite (Stellarator for Training and Research) is our flagship project focused on developing compact stellarator technology for fusion research and education.</p>
-<h3 id="project-goals">Project Goals</h3>
-<ul>
-<li>Training next-generation fusion scientists</li>
-<li>Advancing stellarator design</li>
-<li>Studying plasma confinement</li>
-</ul>
-<h3 id="current-status">Current Status</h3>
-<p>[Add your current research status and achievements]</p>
-<h3 id="technical-specifications">Technical Specifications</h3>
-<p>[Add technical details about STAR_Lite]</p></p>
+                <p>STAR_Lite (Stellarator for Training and Research) is our flagship project focused on developing compact stellarator technology for fusion research and education.
+Project Goals Training next-generation fusion scientists Advancing stellarator design Studying plasma confinement Current Status [Add your current research status and achievements]
+Technical Specifications [Add technical details about STAR_Lite]</p>
             </article>
         
             <article class="mb-8">
